--- a/vercel.json
+++ b/vercel.json
@@ -7,7 +7,7 @@
       "config": { "maxLambdaSize": "15mb", "runtime": "python3.9" }
     },
     {
-      "src": "build_files.sh",
+      "src": "vercel_build.sh",
       "use": "@vercel/static-build",
       "config": {
         "distDir": "staticfiles"
@@ -25,6 +25,7 @@
     }
   ],
   "env": {
-    "DJANGO_ENV": "production"
+    "DJANGO_ENV": "production",
+    "VERCEL": "1"
   }
 }
